# peyeutils

./: README.md  pyproject.toml
doc/: datastorage.txt  install.sh  nullmodel_ideas.txt  todo.txt  todo_qualitycontrol.txt
examples/: infant_human_marmo_macaque_gaze.py  plotsaccs.py
examples/eyelink/: example_rawedf.py  marmoset_example.edf  testedf.py
examples/icdl2026_cswl/: 22-1_nonTC1_100-1.gazedata  cswl_example.py  richard_compute_regressors.py  richard_outcome_by_params.py
examples/infant/: infant_human_marmo_macaque_gaze.py
examples/marmo_jnp_2025/: create_wajd_dates.py  gazecoors.csv  mark_wajd_dates_musicmol.py  wajd_dates.py  wajd_dates_labeled.xlsx  wajd_muscimol_labelled.csv
examples/marmo_jnp_2025/pipeline/: 01_correlation.py  01_create_old_idx.py  a00_build_wajd_marmo_index_from_directory.py  a00_check_wajd_marmo_index_from_directory.py  a00_create_wajd_idx.py  a01_add_muscimol_to_wajddates.py  b00_create_old_idx.py  c00_create_infant_idx.py  c01_create_infant_gaze.py  c02_infant_resample.py
examples/marmo_jnp_2025/plotting/: distplot.py  makeexampleplt.py  spatialdistr.py  test_pairwise_heatmap.py
examples/schizo/py/: 00_parse_SZ_index.py  01_extract_SZ_edfs.py  02_classify_events.py  03_fmri_outside_corr.py  04_saliency.py
examples/schizo/scripts/: 00_make_initial_index.sh  01_extract_trials_blocks.sh  combine.sh  pdfmerge.sh
examples/tg3/: testtobiig3.py  tg3_summarize_video_plots.py
src/peyeutils/: __init__.py  defs.py  peyeutils.py
src/peyeutils/eyelink/: __init__.py  eyelink.py
tests/: test.py  testtobiig3.py
(+41 files in other folders)
